# PyConductor

./: README.md  app.py  main.py  pyproject.toml
backend/: app.py  gestures.py  pyproject.toml  render.yaml  requirements.txt  wsgi.py
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/conduct/: page.tsx
frontend/src/socket-io/: event-emitters.ts  socket.ts
