[project]
name = "pyconductor"
version = "0.1.0"
description = "Gesture recognition app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiortc>=1.13.0",
    "eventlet>=0.40.2",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "mediapipe>=0.10.14",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
]

[project.scripts]
start = "wsgi:app"
